<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.05">

            <ProgressBar
                style="@style/Widget.ProgressBar.Vertical"
                android:id="@+id/local_player_progress"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/padding_5dp"
                android:paddingLeft="@dimen/padding_5dp"
                android:paddingRight="@dimen/padding_5dp"
                android:progress="0" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.9"
            android:gravity="center_vertical|center">
            <TextView
                android:id="@+id/question_id_text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/question_text_view"
                android:text="@string/question_temp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_5dp"
                android:gravity="center_vertical|center"
                android:textColor="#444444"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.05">
            <ProgressBar
                style="@style/Widget.ProgressBar.Vertical"
                android:id="@+id/opponent_progress"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/padding_5dp"
                android:paddingLeft="@dimen/padding_5dp"
                android:paddingRight="@dimen/padding_5dp"
                android:progress="0" />
        </RelativeLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/option1_button_text_view"
            android:layout_margin="@dimen/padding_5dp"
            android:text="@string/option1_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5dp"
            android:textSize="20sp"
            android:onClick="getResponse"
            android:background="@drawable/buttonshape"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/option2_button_text_view"
            android:layout_margin="@dimen/padding_5dp"
            android:text="@string/option2_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5dp"
            android:textSize="20sp"
            android:onClick="getResponse"
            android:background="@drawable/buttonshape"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/option3_button_text_view"
            android:layout_margin="@dimen/padding_5dp"
            android:text="@string/option3_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5dp"
            android:textSize="20sp"
            android:onClick="getResponse"
            android:background="@drawable/buttonshape"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/option4_button_text_view"
            android:layout_margin="@dimen/padding_5dp"
            android:text="@string/option4_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5dp"
            android:textSize="20sp"
            android:onClick="getResponse"
            android:background="@drawable/buttonshape"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="1">


        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/countdown_timer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/padding_5dp"
            android:paddingRight="@dimen/padding_5dp"
            android:progress="0"
            android:max="9"/>

        <TextView
            android:id="@+id/chosen_answer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>